# teaclave-sample-unit-test

./: .gitignore  README.md
samplecode/project_template/app/: Cargo.toml
samplecode/project_template/app/src/: main.rs
samplecode/project_template/enclave/: Cargo.toml  Enclave.edl
samplecode/project_template/enclave/src/: lib.rs
