[workspace]

[package]
name = "template"
version = "1.0.0"
authors = ["The Teaclave Authors"]

[lib]
name = "sample" # Library name. If you change this, please reflect those changes in the Makefile on the variable ENCLAVE_CARGO_LIB
crate-type = ["staticlib"]

[features]
default = [
    # "sp-io/sgx",
    # "environmental/sgx",
    # "itp-sgx-externalities/sgx",
]

[dependencies]
# TODO "with_http_req_sgx",
http-grpc-client = { path = "../../../../http-grpc-client", default-features = false, features = ["sgx","with_http_req_sgx"] }
# # W/A to force a recent version of sgx_unwind
# # error[E0557]: feature has been removed
# #   --> /home/xxx/.cargo/git/checkouts/teaclave-sgx-sdk-be25c2ad2f03718d/a6a172e/sgx_unwind/lib.rs:24:12   |
# # 24 | #![feature(unwind_attributes)]
# #    |            ^^^^^^^^^^^^^^^^^ feature has been removed   |
# #    = note: use the C-unwind ABI instead
# sgx_tstd = { default-features = false, version = "1.1.6", git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.6" }
# # TODO move out of here and into main package? this is needed only for "disable_target_static_assertions"
# # sp-runtime-interface = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
# # ^^^^ not needed; already done by "sp-io" below cf https://github.com/integritee-network/worker/blob/master/core-primitives/substrate-sgx/sp-io/Cargo.toml
# # same as sp-runtime-interface? MUST use integritee's version NOT https://github.com/paritytech/substrate.git
# # sp-io = { default-features = false, git = "https://github.com/integritee-network/worker.git", features = ["disable_oom", "disable_panic_handler", "disable_allocator", "sgx"] }
# # https://github.com/integritee-network/worker/blob/master/core-primitives/substrate-sgx/environmental/Cargo.toml
# environmental = { version = "1.1.3", default-features = false, git = "https://github.com/integritee-network/worker.git", rev = "b54c825", features = ["sgx"] }
# itp-sgx-externalities = { default-features = false, git = "https://github.com/integritee-network/worker.git", rev = "b54c825", features = ["sgx"] }

# log = { version = "0.4", default-features = false }
# base64 = { default-features = false, features = ["alloc"], version = "0.21" }
# bytes = { version = "1", default-features = false }
# # https://github.com/tokio-rs/prost#using-prost-in-a-no_std-crate
# prost = { version = "0.11", default-features = false, features = ["prost-derive"] }
# serde = { version = "1", default-features = false }
# serde_json = { version = "1", default-features = false, features = ['alloc'] }
# hex = { version = "0.4", default-features = false, features = ['alloc'] }
# codec = { package = "parity-scale-codec", version = "3", default-features = false, features = [
# 	"derive",
# ] }
# snafu = { version = "0.7", default-features = false }

[target.'cfg(not(target_env = "sgx"))'.dependencies] # You can remove what you don't need, except types and tstd
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.6" }
sgx_tstd = { default-features = false, git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace"], rev = "v1.1.6" }
sgx_tcrypto = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.6" }
sgx_trts = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.6" }
sgx_tseal = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.6" }
sgx_serialize = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.6" }
sgx_alloc = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.6" }
sgx_libc = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.6" }

# cf /.../integritee-worker/enclave-runtime/Cargo.toml
# and https://github.com/integritee-network/worker/blob/master/core-primitives/substrate-sgx/sp-io/Cargo.toml
[patch."https://github.com/paritytech/substrate.git"]
sp-io = { version = "7.0.0", git = "https://github.com/integritee-network/worker.git", rev = "b54c825" }

[patch."https://github.com/paritytech/substrate"]
sp-io = { version = "7.0.0", git = "https://github.com/integritee-network/worker.git", rev = "b54c825" }

# [patch.crates-io]
# environmental = { version = "1.1.3", git = "https://github.com/integritee-network/worker.git", rev = "b54c825", features = ["sgx"] }

# [patch."https://github.com/integritee-network/worker.git"]
# environmental = { version = "1.1.3", git = "https://github.com/integritee-network/worker.git", rev = "b54c825", features = ["sgx"] }
# itp-sgx-externalities = { version = "0.9.0", git = "https://github.com/integritee-network/worker.git", rev = "b54c825" }

# cf /.../integritee-worker/enclave-runtime/Cargo.toml
[patch."https://github.com/apache/teaclave-sgx-sdk.git"]
sgx_alloc = { version = "1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "v1.1.6-testing" }
sgx_crypto_helper = { version = "1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "v1.1.6-testing" }
sgx_libc = { version = "1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "v1.1.6-testing" }
sgx_rand = { version = "1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "v1.1.6-testing" }
sgx_serialize = { version = "1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "v1.1.6-testing" }
sgx_serialize_derive = { version = "1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "v1.1.6-testing" }
sgx_serialize_derive_internals = { version = "1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "v1.1.6-testing" }
sgx_tcrypto = { version = "1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "v1.1.6-testing" }
sgx_tcrypto_helper = { version = "1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "v1.1.6-testing" }
sgx_trts = { version = "1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "v1.1.6-testing" }
sgx_tse = { version = "1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "v1.1.6-testing" }
sgx_tseal = { version = "1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "v1.1.6-testing" }
sgx_tstd = { version = "1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "v1.1.6-testing" }
sgx_tunittest = { version = "1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "v1.1.6-testing" }
sgx_types = { version = "1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "v1.1.6-testing" }

[patch.crates-io]
getrandom = { git = "https://github.com/integritee-network/getrandom-sgx", branch = "update-v2.3" }
# WARNING! error: duplicate lang item in crate `sgx_tstd` (which `log` depends on): `f32_runtime`
# FIX: make sure ALL dependencies use "log-sgx"+"env_logger-sgx" when compiling for the enclave(ie features "sgx")
# DO NOT remove those: it would compile but nothing would be logged!
log = { git = "https://github.com/integritee-network/log-sgx" }
env_logger = { git = "https://github.com/integritee-network/env_logger-sgx" }

[patch."https://github.com/mesalock-linux/log-sgx"]
log = { git = "https://github.com/integritee-network/log-sgx" }