[workspace]
# NEEDED, else
#    Compiling http-grpc-client v0.3.0 (/.../rs-common/http-grpc-client)
# error[E0152]: duplicate lang item in crate `std` (which `serde` depends on): `panic_impl`.
#   |
#   = note: the lang item is first defined in crate `sgx_tstd` (which `http_req` depends on)
#   = note: first definition in `sgx_tstd` loaded from /.../rs-common/tests_sgx/samplecode/project_template/enclave/target/release/deps/libsgx_tstd-ebb37a331528b577.rmeta
#   = note: second definition in `std` loaded from /.../.rustup/toolchains/nightly-2022-10-22-x86_64-unknown-linux-gnu/lib/rustlib/x86_64-unknown-linux-gnu/lib/libstd-7b2106000b625742.rlib
# Why?
# b/c of parity-scale-codec: with resolver = "2"
# serde v1.0.152
# ├── http-grpc-client v0.3.0 (/.../rs-common/http-grpc-client)
# │   └── template v1.0.0 (/.../rs-common/tests_sgx/samplecode/project_template/enclave)
# └── serde_json v1.0.91
#     └── http-grpc-client v0.3.0 (/.../rs-common/http-grpc-client) (*)
# serde v1.0.152
# └── toml v0.5.11
#     └── proc-macro-crate v1.2.1
#         └── parity-scale-codec-derive v3.1.4 (proc-macro)
#             └── parity-scale-codec v3.2.2
#                 └── http-grpc-client v0.3.0 (/.../rs-common/http-grpc-client) (*)
# But with resolver = "2" we get
# serde v1.0.152
# ├── http-grpc-client v0.3.0 (/.../rs-common/http-grpc-client)
# │   └── template v1.0.0 (/.../rs-common/tests_sgx/samplecode/project_template/enclave)
# ├── serde_json v1.0.91
# │   └── http-grpc-client v0.3.0 (/.../rs-common/http-grpc-client) (*)
# └── toml v0.5.11
#     └── proc-macro-crate v1.2.1
#         └── parity-scale-codec-derive v3.1.4 (proc-macro)
#             └── parity-scale-codec v3.2.2
#                 └── http-grpc-client v0.3.0 (/.../rs-common/http-grpc-client) (*)
resolver = "2"

[package]
name = "template"
version = "1.0.0"
authors = ["The Teaclave Authors"]

[lib]
name = "sample" # Library name. If you change this, please reflect those changes in the Makefile on the variable ENCLAVE_CARGO_LIB
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
# TODO add feature "with_sp_offchain"
http-grpc-client = { path = "../../../../http-grpc-client", default-features = false, features = ["sgx", "with_http_req_sgx"] }

[target.'cfg(not(target_env = "sgx"))'.dependencies] # You can remove what you don't need, except types and tstd
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.6" }
sgx_tstd = { default-features = false, git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace"], rev = "v1.1.6" }
sgx_tcrypto = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.6" }
sgx_trts = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.6" }
sgx_tseal = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.6" }
sgx_serialize = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.6" }
sgx_alloc = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.6" }
sgx_libc = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.6" }

# cf /.../integritee-worker/enclave-runtime/Cargo.toml
# and https://github.com/integritee-network/worker/blob/master/core-primitives/substrate-sgx/sp-io/Cargo.toml
[patch."https://github.com/paritytech/substrate"]
sp-io = { version = "7.0.0", git = "https://github.com/integritee-network/worker.git", rev = "b54c825" }

# cf /.../integritee-worker/enclave-runtime/Cargo.toml
[patch."https://github.com/apache/teaclave-sgx-sdk.git"]
sgx_alloc = { version = "1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "v1.1.6-testing" }
sgx_crypto_helper = { version = "1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "v1.1.6-testing" }
sgx_libc = { version = "1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "v1.1.6-testing" }
sgx_rand = { version = "1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "v1.1.6-testing" }
sgx_serialize = { version = "1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "v1.1.6-testing" }
sgx_serialize_derive = { version = "1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "v1.1.6-testing" }
sgx_serialize_derive_internals = { version = "1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "v1.1.6-testing" }
sgx_tcrypto = { version = "1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "v1.1.6-testing" }
sgx_tcrypto_helper = { version = "1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "v1.1.6-testing" }
sgx_trts = { version = "1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "v1.1.6-testing" }
sgx_tse = { version = "1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "v1.1.6-testing" }
sgx_tseal = { version = "1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "v1.1.6-testing" }
sgx_tstd = { version = "1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "v1.1.6-testing" }
sgx_tunittest = { version = "1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "v1.1.6-testing" }
sgx_types = { version = "1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "v1.1.6-testing" }
